Fix layout issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,20 @@
+.app-container {
+  display: grid;
+  width: 100%;
+  height: 100%;
+  grid-template-columns: auto;
+  grid-template-rows: 55px 0px auto;
+  grid-template-areas:
+    "navbar"
+    "router"
+    "app-differ";
+}
+
 .navbar {
-  grid-area: header;
+  grid-area: navbar;
   border-bottom: 1px #ccc solid;
-  display: flex;
   background-color: #eee;
-  justify-content: flex-start;
   align-items: center;
   padding: 20px;
-  z-index: 2;
   box-shadow: 1px 1px 5px #ccc;
 }
